# LL-mtproto

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  test.py  test_benchmark_crypto.py  test_benchmark_tl.py  test_download.py  test_key_exchange.py  test_performance.py  test_rpc_call_container.py  test_upload.py  update_schema.sh
ll_mtproto/: __init__.py  client.py  constants.py  in_thread.py  localsettings.py  typed.py
ll_mtproto/client/: __init__.py  client.py  connection_info.py  pending_container_request.py  pending_request.py  rpc_error.py  seqno_generator.py  update.py
ll_mtproto/client/error_description_resolver/: AbstractErrorDescriptionResolver.py  PwrTelegramErrorDescriptionResolver.py  base_error_description_resolver.py  pwrtelegram_error_description_resolver.py
ll_mtproto/crypto/: __init__.py  aes_ige.py  auth_key.py  public_rsa.py
ll_mtproto/crypto/providers/: __init__.py  crypto_provider_base.py  crypto_provider_cryptg.py
ll_mtproto/math/: __init__.py  primes.py
ll_mtproto/network/: __init__.py  auth_key_expired_error.py  auth_key_not_found_exception.py  datacenter_info.py  dispatcher.py  encryption.py  mtproto.py  mtproto_key_exchange.py  tcp.py  transport_error.py
ll_mtproto/network/dh/: mtproto_key_creator.py  (+2 more)
ll_mtproto/resources/: application.tl  auth.tl  service.tl  telegram.rsa.pub  telegram.test.rsa.pub
ll_mtproto/tl/: __init__.py  bytereader.py  byteutils.py  byteutils_nomypyc.py  structure.py  tl.py  tl_utils.py  tls_system.py  types_generator.py
ll_mtproto_tests/: test_benchmark_crypto.py  test_benchmark_tl.py  test_download.py  test_key_exchange.py  test_performance.py  test_rpc_call_container.py  test_upload.py
(+16 files in other folders)
