[build-system]
requires = [
    "setuptools >= 61.0",
    "mypy[mypyc]==1.10.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "ll_mtproto"
version = "0.0.1"
authors = [
    {name = "andrew-ld"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12.4"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.mypy]
python_version = "3.12"
files = [ "ll_mtproto/tl/tl.py" ]
warn_return_any = true
warn_unused_configs = true
strict = true
