[build-system]
requires = [
    "setuptools >= 75.3.0",
    "mypy[mypyc,faster-cache]==1.13.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "ll_mtproto"
version = "0.0.1"
authors = [
    {name = "andrew-ld"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13.0"

[tool.mypy]
python_version = "3.13"
files = [ "ll_mtproto/tl/tl.py" ]
warn_return_any = true
warn_unused_configs = true
strict = true
